--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
               data-aos-once="true"
             >
               <div class="content">
-                <h1>CCA iGEM's  Science Summer Camp</h1>
+                <h1>CCA iGEM's Science Camp</h1>
                 <p>
-                  Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for 2022!
+                  Learn biology, synthetic biology, chemistry, and forensics at
+                  a high school level, now in-person for summer 2022!
                 </p>
                 <a href="#" class="btn focus-reset">Sign Up Today</a>
               </div>
@@ -167,7 +168,7 @@
             >
               <div class="banner-image-l-14">
                 <img
-                  src="./image/l4/hero-img.png"
+                  src="./image/l4/hero-img-1.png"
                   alt=""
                   class="w-100 mt-xl-n10"
                 />
@@ -240,7 +241,7 @@
           </div>
         </div>
       </div> -->
-	  <div class="py-4"></div>
+      <div class="py-4"></div>
       <!-- Content-Area-1 -->
       <div class="content-area-l-14-1 position-relative">
         <div class="container">
@@ -273,7 +274,7 @@
             >
               <div class="content-img">
                 <img
-                  src="image/l4/content-img-1.png"
+                  src="image/l4/content-img-1-1.png"
                   alt=""
                   class="w-100 w-xl-auto"
                 />
@@ -293,7 +294,7 @@
               data-aos-once="true"
             >
               <div class="content-img pr-lg-13">
-                <img src="image/l4/content-img-2.png" alt="" class="w-100" />
+                <img src="image/l4/content-img-2-1.png" alt="" class="w-100" />
               </div>
             </div>
             <div
