fix: fuzzy edges

--- a/index.html
+++ b/index.html
@@ -255,10 +255,9 @@
               <div
                 class="h-100 section-heading-8 content text-lg-start text-center"
               >
-                <h2>Build Beautiful Landing Pages Faster.</h2>
+                <h2>Lorem ipsum dolor sit amet.</h2>
                 <p>
-                  Create custom landing pages with Shades that convert more
-                  visitors than any website—no coding required.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
@@ -304,10 +303,9 @@
               data-aos-once="true"
             >
               <div class="content section-heading-8 text-lg-start text-center">
-                <h2>Build Beautiful Landing Pages Faster.</h2>
+                <h2>Lorem ipsum dolor sit amet.</h2>
                 <p>
-                  Create custom landing pages with Shades that convert more
-                  visitors than any website, no coding required.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
