--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       rel="stylesheet"
     />
     <!-- Plugin'stylesheets  -->
-    <link rel="stylesheet" href="./plugins/aos/aos.min.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+
     <!-- Vendor stylesheets  -->
     <link rel="stylesheet" href="./css/main.css" />
     <!-- Custom stylesheet -->
@@ -129,7 +130,7 @@
                 class="btn btn trail-btn focus-reset"
                 href="https://finestdevs.com/shade/"
               >
-                Start free trail
+                Sign Up Now
               </a>
             </div>
             <!-- mobile menu trigger -->
@@ -257,7 +258,8 @@
               >
                 <h2>Lorem ipsum dolor sit amet.</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt.
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
@@ -305,7 +307,8 @@
               <div class="content section-heading-8 text-lg-start text-center">
                 <h2>Lorem ipsum dolor sit amet.</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
@@ -738,10 +741,9 @@
       </footer>
     </div>
     <!-- Vendor Scripts -->
-    <script src="js/vendor.min.js"></script>
-    <script src="./plugins/aos/aos.min.js"></script>
-    <script src="./plugins/menu/menu.js"></script>
+    <script src="./js/vendor.min.js" type="module"></script>
+    <script src="./plugins/menu/menu.js" type="module"></script>
     <!-- Activation Script -->
-    <script src="js/custom.js"></script>
+    <script src="./js/custom.js" type="module"></script>
   </body>
 </html>
