--- a/index.html
+++ b/index.html
@@ -741,6 +741,7 @@
       </footer>
     </div>
     <!-- Vendor Scripts -->
+    <script src="./plugins/jquery/jquery.min.js" type="module"></script>
     <script src="./js/vendor.min.js" type="module"></script>
     <script src="./plugins/menu/menu.js" type="module"></script>
     <!-- Activation Script -->
