--- a/index.html
+++ b/index.html
@@ -741,8 +741,9 @@
       </footer>
     </div>
     <!-- Vendor Scripts -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="module"></script>
+
     <script src="./js/vendor.min.js" type="module"></script>
+    <script src="./plugins/jquery/jquery.min.js" type="module"></script>
     <script src="./plugins/menu/menu.js" type="module"></script>
     <!-- Activation Script -->
     <script src="./js/custom.js" type="module"></script>
