--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
     </div>
     <!-- Vendor Scripts -->
     <script src="./plugins/jquery/jquery.min.js" type="module"></script>
-    <script src="./js/vendor.min.js" type="module"></script>
+    <!-- <script src="./js/vendor.min.js" type="module"></script> -->
     <script src="./plugins/menu/menu.js" type="module"></script>
     <!-- Activation Script -->
     <script src="./js/custom.js" type="module"></script>
