--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Sass subscription</title>
+    <title>CCA iGEM Summer Camp | Join Today!</title>
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon" />
+
+
+
     <!-- Bootstrap , fonts & icons  -->
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="./fonts/icon-font/css/style.css" />
@@ -67,7 +70,7 @@
               <a href="#">
                 <!-- light version logo (logo must be black)-->
                 <img
-                  src="image/logo/logo-black.png"
+                  src="image/logo/logo-black-1.png"
                   alt=""
                   class="light-version-logo"
                 />
@@ -418,8 +421,7 @@
               <div class="section-heading-8">
                 <h2>Simple pricing</h2>
                 <p>
-                  Create custom landing pages with Shades that convert more
-                  visitors than any website—no coding required.
+                  Below are the various amounts of money that you are allowed to donate monthly or yearly to Melinda Chang (***EXTREMELY POOR)
                 </p>
               </div>
             </div>
