--- a/index.html
+++ b/index.html
@@ -337,11 +337,9 @@
                   <img src="./image/l4/f-icon-1.png" alt="" />
                 </div>
                 <div class="content-body pl-sm-14 pl-5">
-                  <h5>Easy to use</h5>
+                  <h5>Advanced curriculum</h5>
                   <p class="mb-0">
-                    Event is not like most tech conferences. We want our
-                    presentations to engage the audience, spark discussion and
-                    inspire new ideas.
+                    Learn about innovative STEM topics in a fun and engaging classroom environment. Students will have opportunities to discuss and implement new ideas with like-minded peers.
                   </p>
                 </div>
               </div>
