--- a/index.html
+++ b/index.html
@@ -259,10 +259,9 @@
               <div
                 class="h-100 section-heading-8 content text-lg-start text-center"
               >
-                <h2>Lorem ipsum dolor sit amet.</h2>
+                <h2>Advanced curriculum</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt.
+                  Learn about innovative STEM topics in a fun and engaging classroom environment. We offer many opportunities for students to discuss and implement new ideas in various scientific fields.
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
@@ -308,10 +307,9 @@
               data-aos-once="true"
             >
               <div class="content section-heading-8 text-lg-start text-center">
-                <h2>Lorem ipsum dolor sit amet.</h2>
+                <h2>Hands-on labs</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Advanced, in-person biology and chemistry labs inspired by high school classes. Learn valuable skills for internships, research, and future STEM classes. 
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
@@ -323,7 +321,7 @@
         </div>
       </div>
       <!-- Feature Area -->
-      <div class="features-area-l-14">
+      <!-- div class="features-area-l-14">
         <div class="container bg-shape-img-2 position-relative">
           <div class="row features-area-l-14 justify-content-center mx-0">
             <div
@@ -370,7 +368,6 @@
               data-aos-once="true"
             >
               <div class="content-area d-flex">
-                <!-- circle-85 start -->
                 <div class="circle-85 hover-icon">
                   <img src="./image/l4/f-icon-3.png" alt="" />
                 </div>
@@ -405,7 +402,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div-->
       <!-- Pricing-area section -->
       <div class="pricing-area-l14 position-relative overflow-hidden z-index-1">
         <div class="container">
