add: meta tags, prettier

--- a/index.html
+++ b/index.html
@@ -6,8 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>CCA iGEM Summer Camp | Join Today!</title>
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon" />
+    s
+    <!-- Primary Meta Tags -->
+    <title>CCA iGEM Summer Camp | Join Today!</title>
+    <meta name="title" content="CCA iGEM Summer Camp | Join Today!" />
+    <meta
+      name="description"
+      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022!"
+    />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="CCA iGEM Summer Camp | Join Today!" />
+    <meta
+      property="og:description"
+      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022!"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
 
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="CCA iGEM Summer Camp | Join Today!" />
+    <meta
+      property="twitter:description"
+      content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
 
     <!-- Bootstrap , fonts & icons  -->
     <link rel="stylesheet" href="./css/bootstrap.css" />
@@ -46,11 +78,7 @@
     <!-- Custom stylesheet -->
   </head>
 
-  <body
-    data-theme-mode-panel-active
-    data-theme="light"
-    style="font-family: 'Mazzard H'"
-  >
+  <body data-theme-mode-panel-active data-theme="light" style="font-family: 'Mazzard H'">
     <div class="site-wrapper overflow-hidden position-relative">
       <!-- Site Header -->
       <!-- Preloader -->
@@ -69,17 +97,9 @@
             <div class="brand-logo">
               <a href="#">
                 <!-- light version logo (logo must be black)-->
-                <img
-                  src="image/logo/logo-black-1.png"
-                  alt=""
-                  class="light-version-logo"
-                />
+                <img src="image/logo/logo-black-1.png" alt="" class="light-version-logo" />
                 <!-- Dark version logo (logo must be White)-->
-                <img
-                  src="image/logo/logo-white.png"
-                  alt=""
-                  class="dark-version-logo"
-                />
+                <img src="image/logo/logo-white.png" alt="" class="dark-version-logo" />
               </a>
             </div>
             <div class="menu-block-wrapper">
@@ -116,18 +136,12 @@
                     <a href="#" class="nav-link-item">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a
-                      href="https://uxtheme.net/product-support/"
-                      class="nav-link-item"
-                      >Support</a
-                    >
+                    <a href="https://uxtheme.net/product-support/" class="nav-link-item">Support</a>
                   </li>
                 </ul>
               </nav>
             </div>
-            <div
-              class="header-btn header-btn-l-14 ms-auto d-none d-xs-inline-flex"
-            >
+            <div class="header-btn header-btn-l-14 ms-auto d-none d-xs-inline-flex">
               <a
                 target="_blank"
                 class="btn btn trail-btn focus-reset"
@@ -158,8 +172,8 @@
               <div class="content">
                 <h1>CCA iGEM's Science Camp</h1>
                 <p>
-                  Learn biology, synthetic biology, chemistry, and forensics at
-                  a high school level, now in-person for summer 2022!
+                  Learn biology, synthetic biology, chemistry, and forensics at a high school level,
+                  now in-person for summer 2022!
                 </p>
                 <a href="#" class="btn focus-reset">Sign Up Today</a>
               </div>
@@ -171,11 +185,7 @@
               data-aos-once="true"
             >
               <div class="banner-image-l-14">
-                <img
-                  src="./image/l4/hero-img-1.png"
-                  alt=""
-                  class="w-100 mt-xl-n10"
-                />
+                <img src="./image/l4/hero-img-1.png" alt="" class="w-100 mt-xl-n10" />
               </div>
             </div>
           </div>
@@ -256,12 +266,12 @@
               data-aos-duration="1200"
               data-aos-once="true"
             >
-              <div
-                class="h-100 section-heading-8 content text-lg-start text-center"
-              >
+              <div class="h-100 section-heading-8 content text-lg-start text-center">
                 <h2>Advanced curriculum</h2>
                 <p>
-                  Learn about innovative STEM topics in a fun and engaging classroom environment. We offer many opportunities for students to discuss and implement new ideas in various scientific fields.
+                  Learn about innovative STEM topics in a fun and engaging classroom environment. We
+                  offer many opportunities for students to discuss and implement new ideas in
+                  various scientific fields.
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
@@ -276,11 +286,7 @@
               data-aos-once="true"
             >
               <div class="content-img">
-                <img
-                  src="image/l4/content-img-1-1.png"
-                  alt=""
-                  class="w-100 w-xl-auto"
-                />
+                <img src="image/l4/content-img-1-1.png" alt="" class="w-100 w-xl-auto" />
               </div>
             </div>
           </div>
@@ -309,7 +315,8 @@
               <div class="content section-heading-8 text-lg-start text-center">
                 <h2>Hands-on labs</h2>
                 <p>
-                  Advanced, in-person biology and chemistry labs inspired by high school classes. Learn valuable skills for internships, research, and future STEM classes. 
+                  Advanced, in-person biology and chemistry labs inspired by high school classes.
+                  Learn valuable skills for internships, research, and future STEM classes.
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
@@ -416,7 +423,8 @@
               <div class="section-heading-8">
                 <h2>Simple pricing</h2>
                 <p>
-                  Below are the various amounts of money that you are allowed to donate monthly or yearly to Melinda Chang (***EXTREMELY POOR)
+                  Below are the various amounts of money that you are allowed to donate monthly or
+                  yearly to Melinda Chang (***EXTREMELY POOR)
                 </p>
               </div>
             </div>
@@ -647,9 +655,7 @@
       <div class="cta-area-l-14">
         <div class="container position-relative">
           <div class="bg-shape-img-3"></div>
-          <div
-            class="row cta-area-l-14-content justify-content-center text-lg-start text-center"
-          >
+          <div class="row cta-area-l-14-content justify-content-center text-lg-start text-center">
             <div class="col-lg-6">
               <div class="cta-content">
                 <h2 class="text-white">Ready to get started?</h2>
@@ -715,8 +721,8 @@
               <div class="footer-subs-form-l-12">
                 <p>Subscribe to our newsletter</p>
                 <h6>
-                  Subscribe to get lastest offers, news and events
-                  announcements. No spam in your inbox.
+                  Subscribe to get lastest offers, news and events announcements. No spam in your
+                  inbox.
                 </h6>
                 <div class="input-group">
                   <input
@@ -740,6 +746,6 @@
     <!-- Vendor Scripts -->
     <script src="./plugins/menu/menu.js" type="module"></script>
     <!-- Activation Script -->
-    <script src="./js/custom.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
   </body>
 </html>
