--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>CCA iGEM Summer Camp | Join Today!</title>
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon" />
-    s
     <!-- Primary Meta Tags -->
     <title>CCA iGEM Summer Camp | Join Today!</title>
     <meta name="title" content="CCA iGEM Summer Camp | Join Today!" />
@@ -46,30 +45,12 @@
     <link rel="stylesheet" href="./fonts/icon-font/css/style.css" />
     <link rel="stylesheet" href="./fonts/typography-font/typo.css" />
     <link rel="stylesheet" href="./fonts/fontawesome-5/css/all.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet" />
     <!-- Plugin'stylesheets  -->
     <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 
@@ -88,9 +69,7 @@
    </div>
    </div>    -->
       <!--Site Header Area -->
-      <header
-        class="site-header site-header--menu-right landing-14-menu site-header--absolute site-header--sticky"
-      >
+      <header class="site-header site-header--menu-right landing-14-menu site-header--absolute site-header--sticky">
         <div class="container">
           <nav class="navbar site-navbar">
             <!-- Brand Logo-->
@@ -114,9 +93,7 @@
                 </div>
                 <ul class="site-menu-main">
                   <li class="nav-item nav-item-has-children">
-                    <a href="#" class="nav-link-item drop-trigger"
-                      >Dropdowns <i class="fas fa-angle-down"></i>
-                    </a>
+                    <a href="#" class="nav-link-item drop-trigger">Dropdowns <i class="fas fa-angle-down"></i> </a>
                     <ul class="sub-menu" id="submenu-9">
                       <li class="sub-menu--item">
                         <a href="#">Dropdown 01</a>
@@ -142,13 +119,7 @@
               </nav>
             </div>
             <div class="header-btn header-btn-l-14 ms-auto d-none d-xs-inline-flex">
-              <a
-                target="_blank"
-                class="btn btn trail-btn focus-reset"
-                href="https://finestdevs.com/shade/"
-              >
-                Sign Up Now
-              </a>
+              <a target="_blank" class="btn btn trail-btn focus-reset" href="https://finestdevs.com/shade/">Get Started</a>
             </div>
             <!-- mobile menu trigger -->
             <div class="mobile-menu-trigger">
@@ -172,18 +143,13 @@
               <div class="content">
                 <h1>CCA iGEM's Science Camp</h1>
                 <p>
-                  Learn biology, synthetic biology, chemistry, and forensics at a high school level,
-                  now in-person for summer 2022!
+                  Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer
+                  2022!
                 </p>
-                <a href="#" class="btn focus-reset">Sign Up Today</a>
+                <a href="#" class="btn focus-reset">Register Now</a>
               </div>
             </div>
-            <div
-              class="col-xl-7 col-lg-5 col-md-8"
-              data-aos="fade-left"
-              data-aos-duration="800"
-              data-aos-once="true"
-            >
+            <div class="col-xl-7 col-lg-5 col-md-8" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
               <div class="banner-image-l-14">
                 <img src="./image/l4/hero-img-1.png" alt="" class="w-100 mt-xl-n10" />
               </div>
@@ -269,9 +235,8 @@
               <div class="h-100 section-heading-8 content text-lg-start text-center">
                 <h2>Advanced curriculum</h2>
                 <p>
-                  Learn about innovative STEM topics in a fun and engaging classroom environment. We
-                  offer many opportunities for students to discuss and implement new ideas in
-                  various scientific fields.
+                  Learn about innovative STEM topics in a fun and engaging classroom environment. We offer many opportunities for
+                  students to discuss and implement new ideas in various scientific fields.
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
@@ -296,12 +261,7 @@
       <div class="content-area-l-14-2">
         <div class="container">
           <div class="row align-items-center justify-content-center">
-            <div
-              class="col-lg-6 col-md-8"
-              data-aos="fade-right"
-              data-aos-duration="800"
-              data-aos-once="true"
-            >
+            <div class="col-lg-6 col-md-8" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
               <div class="content-img pr-lg-13">
                 <img src="image/l4/content-img-2-1.png" alt="" class="w-100" />
               </div>
@@ -315,8 +275,8 @@
               <div class="content section-heading-8 text-lg-start text-center">
                 <h2>Hands-on labs</h2>
                 <p>
-                  Advanced, in-person biology and chemistry labs inspired by high school classes.
-                  Learn valuable skills for internships, research, and future STEM classes.
+                  Advanced, in-person biology and chemistry labs inspired by high school classes. Learn valuable skills for
+                  internships, research, and future STEM classes.
                 </p>
                 <a href="#" class="btn focus-reset">
                   Get Started Now
@@ -423,18 +383,13 @@
               <div class="section-heading-8">
                 <h2>Simple pricing</h2>
                 <p>
-                  Below are the various amounts of money that you are allowed to donate monthly or
-                  yearly to Melinda Chang (***EXTREMELY POOR)
+                  Below are the various amounts of money that you are allowed to donate monthly or yearly to Melinda Chang
+                  (***EXTREMELY POOR)
                 </p>
               </div>
             </div>
           </div>
-          <div
-            class="row justify-content-center"
-            id="table-price-value"
-            data-pricing-dynamic
-            data-value-active="monthly"
-          >
+          <div class="row justify-content-center" id="table-price-value" data-pricing-dynamic data-value-active="monthly">
             <div class="col-md-12 text-center">
               <!-- toggle-btn start -->
               <div class="toggle-btn d-inline-block justify-content-center">
@@ -467,19 +422,9 @@
                   <div class="main-price pb-8 border-bottom">
                     <div class="price mt-3 mb-3 position-relative">
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2
-                        class="d-inline-block mb-0 dynamic-value"
-                        data-active="15"
-                        data-monthly="19"
-                        data-yearly="199"
-                      ></h2>
+                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="19" data-yearly="199"></h2>
                     </div>
-                    <span
-                      class="dynamic-value"
-                      data-active="per month"
-                      data-monthly="Per month"
-                      data-yearly="per year"
-                    ></span>
+                    <span class="dynamic-value" data-active="per month" data-monthly="Per month" data-yearly="per year"></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
@@ -517,19 +462,9 @@
                   <div class="main-price pb-8 border-bottom">
                     <div class="price mt-3 mb-3 position-relative">
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2
-                        class="d-inline-block mb-0 dynamic-value"
-                        data-active="15"
-                        data-monthly="29"
-                        data-yearly="299"
-                      ></h2>
+                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="29" data-yearly="299"></h2>
                     </div>
-                    <span
-                      class="dynamic-value"
-                      data-active="per month"
-                      data-monthly="per month"
-                      data-yearly="per year"
-                    ></span>
+                    <span class="dynamic-value" data-active="per month" data-monthly="per month" data-yearly="per year"></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
@@ -565,19 +500,9 @@
                   <div class="main-price pb-8 border-bottom">
                     <div class="price mt-3 mb-3 position-relative">
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2
-                        class="d-inline-block mb-0 dynamic-value"
-                        data-active="15"
-                        data-monthly="49"
-                        data-yearly="499"
-                      ></h2>
+                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="49" data-yearly="499"></h2>
                     </div>
-                    <span
-                      class="dynamic-value"
-                      data-active="per month"
-                      data-monthly="per month"
-                      data-yearly="per year"
-                    ></span>
+                    <span class="dynamic-value" data-active="per month" data-monthly="per month" data-yearly="per year"></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
@@ -606,29 +531,16 @@
                 >
                   <!-- price-top start -->
                   <div class="price-top justify-content-between mb-2">
-                    <span
-                      class="font-size-1 letter-spacing-np51 text-dovegray line-height-1p66 font-weight-bold"
-                      >Exclusive</span
-                    >
+                    <span class="font-size-1 letter-spacing-np51 text-dovegray line-height-1p66 font-weight-bold">Exclusive</span>
                   </div>
                   <!-- price-top end -->
                   <!-- main-price start -->
                   <div class="main-price pb-8 border-bottom">
                     <div class="price mt-3 mb-3 position-relative">
                       <span class="d-inline-block mb-0 dynamic-value">$</span>
-                      <h2
-                        class="d-inline-block mb-0 dynamic-value"
-                        data-active="15"
-                        data-monthly="89"
-                        data-yearly="999"
-                      ></h2>
+                      <h2 class="d-inline-block mb-0 dynamic-value" data-active="15" data-monthly="89" data-yearly="999"></h2>
                     </div>
-                    <span
-                      class="dynamic-value"
-                      data-active="per month"
-                      data-monthly="per month"
-                      data-yearly="per year"
-                    ></span>
+                    <span class="dynamic-value" data-active="per month" data-monthly="per month" data-yearly="per year"></span>
                   </div>
                   <!-- main-price end -->
                   <!-- price-body start -->
@@ -671,12 +583,7 @@
       <footer class="footer-area-l-12 position-relative">
         <div class="container">
           <div class="row justify-content-center">
-            <div
-              class="col-lg-7 col-md-11 pl-lg-6"
-              data-aos="fade-right"
-              data-aos-duration="800"
-              data-aos-once="true"
-            >
+            <div class="col-lg-7 col-md-11 pl-lg-6" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
               <div class="row">
                 <div class="col-sm-3 col-xs-6">
                   <div class="footer-widget widget2">
@@ -712,25 +619,12 @@
                 </div>
               </div>
             </div>
-            <div
-              class="col-lg-5 col-md-8 col-sm-11"
-              data-aos="fade-left"
-              data-aos-duration="800"
-              data-aos-once="true"
-            >
+            <div class="col-lg-5 col-md-8 col-sm-11" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
               <div class="footer-subs-form-l-12">
                 <p>Subscribe to our newsletter</p>
-                <h6>
-                  Subscribe to get lastest offers, news and events announcements. No spam in your
-                  inbox.
-                </h6>
+                <h6>Subscribe to get lastest offers, news and events announcements. No spam in your inbox.</h6>
                 <div class="input-group">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Enter your email address"
-                    aria-label=""
-                  />
+                  <input type="text" class="form-control" placeholder="Enter your email address" aria-label="" />
                   <div class="input-group-append">
                     <button class="btn border-0 focus-reset" type="button">
                       <i class="icon icon-tail-right text-white"></i>
@@ -743,9 +637,7 @@
         </div>
       </footer>
     </div>
-    <!-- Vendor Scripts -->
     <script src="./plugins/menu/menu.js" type="module"></script>
-    <!-- Activation Script -->
     <script src="./js/index.js" type="module"></script>
   </body>
 </html>
