add: preload, meta

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+      content="./image/meta.png"
     />
 
     <!-- Twitter -->
@@ -37,7 +37,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+      content="./image/meta.png"
     />
 
     <!-- Bootstrap , fonts & icons  -->
@@ -54,20 +54,17 @@
     <!-- Plugin'stylesheets  -->
     <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 
-    <!-- Vendor stylesheets  -->
     <link rel="stylesheet" href="./css/main.css" />
-    <!-- Custom stylesheet -->
   </head>
 
   <body data-theme-mode-panel-active data-theme="light" style="font-family: 'Mazzard H'">
     <div class="site-wrapper overflow-hidden position-relative">
       <!-- Site Header -->
-      <!-- Preloader -->
-      <!-- <div id="loading">
-    <div class="preloader">
-     <img src="./image/preloader.gif" alt="preloader">
-   </div>
-   </div>    -->
+      <div id="loading">
+        <div class="preloader">
+          <img src="./image/preloader.gif" alt="preloader" />
+        </div>
+      </div>
       <!--Site Header Area -->
       <header class="site-header site-header--menu-right landing-14-menu site-header--absolute site-header--sticky">
         <div class="container">
