--- a/index.html
+++ b/index.html
@@ -16,29 +16,23 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://www.ccaigemcamp.com" />
     <meta property="og:title" content="CCA iGEM Summer Camp | Join Today!" />
     <meta
       property="og:description"
       content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022!"
     />
-    <meta
-      property="og:image"
-      content="./image/meta.png"
-    />
+    <meta property="og:image" content="https://i.imgur.com/rpTzzTe.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="www.ccaigemcamp.com" />
     <meta property="twitter:title" content="CCA iGEM Summer Camp | Join Today!" />
     <meta
       property="twitter:description"
       content="Learn biology, synthetic biology, chemistry, and forensics at a high school level, now in-person for summer 2022!"
     />
-    <meta
-      property="twitter:image"
-      content="./image/meta.png"
-    />
+    <meta property="twitter:image" content="https://i.imgur.com/rpTzzTe.png" />
 
     <!-- Bootstrap , fonts & icons  -->
     <link rel="stylesheet" href="./css/bootstrap.css" />
